# statistical-rethinking

./: pyproject.toml
notebooks/: 02_small_large_worlds.ipynb  03_sampling_the_imaginary.ipynb
